Fix double header issue on old home page, left align spending explorer button

--- a/src/_scss/pages/homepage2/features/_spendingExplorer.scss
+++ b/src/_scss/pages/homepage2/features/_spendingExplorer.scss
@@ -47,8 +47,7 @@
 
             width: rem(273);
             height: rem(57);
-            margin-left: auto;
-            margin-right: auto;
+            margin-left: 0;
 
             @include media($medium-screen) {
                 margin-left: 0;
